Fix iPhone position on mobile

--- a/src/common/components/feature-list-section/feature-list-section.scss
+++ b/src/common/components/feature-list-section/feature-list-section.scss
@@ -89,7 +89,7 @@
 }
 
 
-@include to-sm-width {
+@include to-md-width {
     .sticky-iphone {
         margin: 0 auto 50px auto;
 
